k8s/staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: staging-deployment
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      component: movies-web
  template: 
    metadata: 
      labels: 
        component: movies-web
    spec:
      volumes:
        - name: code
          emptyDir: {} 
        - name: sock
          emptyDir: {}
        - name: config-volume
          configMap:
            name: laravel-todo
            items:
            - key: config
              path: env
        - name: db-secret
          secret:
            secretName: staging-db
        - name: environment-secret
          secret:
            secretName: staging-environment
        - name: my-pvc-nfs
          persistentVolumeClaim:
            claimName: nfs
      containers: 
        - 
          image: franslourens/nginx-laravel
          name: nginx
          imagePullPolicy: Always
          ports: 
            - 
              containerPort: 80
          volumeMounts:
            - 
              name: code
              mountPath: /var/www
            - 
              name: sock
              mountPath: /socket
        - 
          image: franslourens/php-laravel
          imagePullPolicy: Always
          name: fpm
          volumeMounts:
            - 
              name: code
              mountPath: /var/www
            - 
              name: sock
              mountPath: /socket
            -
              name: db-secret
              mountPath: /etc/db-secret
            -
              name: environment-secret
              mountPath: /etc/environment-secret
            - name: my-pvc-nfs
              mountPath: "/var/www/movies/public/nfs/"
