k8s/memcache-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memcache-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: memcache
  ports:
    - port: 11211
      targetPort: 11211
